apps/crowdsec/kustomization/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: crowdsec-lapi
spec:
  endpointSelector:
    matchLabels:
      k8s-app: crowdsec
      type: lapi
  ingress:
  - fromEntities:
    - host
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: crowdsec
        k8s-app: crowdsec
        type: agent
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: traefik
        app.kubernetes.io/name: traefik
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: monitoring
        app.kubernetes.io/name: prometheus
    toPorts:
    - ports:
      - port: "6060"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      rules:
        dns:
        - matchPattern: "*"
  - toFQDNs:
    - matchName: api.crowdsec.net
    - matchName: hub-data.crowdsec.net
    - matchName: version.crowdsec.net
    - matchName: www.cloudflare.com
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: crowdsec-agent
spec:
  endpointSelector:
    matchLabels:
      k8s-app: crowdsec
      type: agent
  ingress:
  - fromEntities:
    - host
    toPorts:
    - ports:
      - port: "6060"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: monitoring
        app.kubernetes.io/name: prometheus
    toPorts:
    - ports:
      - port: "6060"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      rules:
        dns:
        - matchPattern: "*"
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: crowdsec
        k8s-app: crowdsec
        type: lapi
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
  - toFQDNs:
    - matchName: api.crowdsec.net
    - matchName: hub-data.crowdsec.net
    - matchName: version.crowdsec.net
    - matchName: www.cloudflare.com
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
